objects/SVMXC__Service_Order__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_Final_Approved_Estimate_Amount__c</fullName>
        <description>Final estimate approved / signed from the client</description>
        <inlineHelpText>Final estimate approved / signed from the client</inlineHelpText>
        <label>Final Approved Estimate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ForceIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Geography__c</fullName>
        <description>Mapped from the Location. Used to assist advanced technician search.</description>
        <label>Geography</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Global_Lock_SFMs__c</fullName>
        <description>Used for global criteria for SFWs</description>
        <formula>IF( (ISPICKVAL(SVMXC__Order_Status__c ,&apos;Ready for Review&apos;) || ISPICKVAL(SVMXC__Order_Status__c,&apos;Invoiced&apos;) || ISPICKVAL(SVMXC__Order_Status__c,&apos;Invoice Not Required&apos;)) &amp;&amp;  ($Profile.Name = &apos;SVMX PS - APAC Field Engineer - Platform&apos; || $Profile.Name = &apos;SVMX PS - APAC Service Manager - Platform&apos; || $Profile.Name = &apos;SVMX PS - Field Engineer - Platform&apos; || $Profile.Name = &apos;SVMX PS - Service Manager - Platform&apos;), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for global criteria for SFWs</inlineHelpText>
        <label>Global Lock SFMs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HSI1_Answer__c</fullName>
        <description>Response to HSI Question</description>
        <inlineHelpText>Response to HSI Question</inlineHelpText>
        <label>HSI Q1 Answer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                    <label>Don&apos;t Know</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_HSI2_Answer__c</fullName>
        <description>Response to HSI Question</description>
        <inlineHelpText>Response to HSI Question</inlineHelpText>
        <label>HSI Q2 Answer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                    <label>Don&apos;t Know</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_HSI3_Answer__c</fullName>
        <description>Response to HSI Question</description>
        <inlineHelpText>Response to HSI Question</inlineHelpText>
        <label>HSI Q3 Answer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                    <label>Don&apos;t Know</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_HSI_Q1__c</fullName>
        <defaultValue>&quot;Was there a death or injury as a direct consequence of the reported fault?&quot;</defaultValue>
        <description>Health , Safety and Inspection Question 1 for Complaints</description>
        <label>HSI Q1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HSI_Q2__c</fullName>
        <defaultValue>&quot;Were erroneous results reported as a direct consequence of the reported fault?&quot;</defaultValue>
        <description>Health Safety and Inspection Question 2</description>
        <label>HSI Q2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HSI_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HSI Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HS_Questionnaire_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether health and safety questionnaire has been completed</description>
        <inlineHelpText>Denotes whether health and safety questionnaire has been completed</inlineHelpText>
        <label>Health &amp; Safety Questionnaire Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IP_PlannerGroup__c</fullName>
        <formula>SVMXC__Component__r.SMAX_PS_PlannerGroup__c</formula>
        <label>IP Planner Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IP_Product_Line__c</fullName>
        <description>Used for classification of Remote Work Orders by Product Line. Phase 1.</description>
        <label>IP Product Line</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Internal_Description__c</fullName>
        <label>Internal Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Invoice_Code_Value__c</fullName>
        <description>See Invoice Code field. It&apos;s added at the SAP level on DMR. CIG code changes every time - if customer has 5 service orders, for each they can supply a separate CIG so it is not a set and unchangeable code. Agents need ability to choose CIG or IPA and add it as text: Example: CIG – 12345 on WO.</description>
        <inlineHelpText>See Invoice Code field. It&apos;s added at the SAP level on DMR. CIG code changes every time - if customer has 5 service orders, for each they can supply a separate CIG so it is not a set and unchangeable code. Agents need ability to choose CIG or IPA and add</inlineHelpText>
        <label>Invoice Code Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Invoice_Code__c</fullName>
        <description>There needs to be extra field in a WO (drop down: CIG, IPA), they are obligatory for public customers in Italy. If the code is not on the WO and service report, the invoice will not be accepted. Public customer decide which code to use. Usually on 130 calls but also on 132 billable calls.</description>
        <inlineHelpText>There needs to be extra field in a WO (drop down: CIG, IPA), they are obligatory for public customers in Italy. If the code is not on the WO and service report, the invoice will not be accepted. Public customer decide which code to use. Usually on 130 cal</inlineHelpText>
        <label>Invoice Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IPA</fullName>
                </value>
                <value>
                    <fullName>CIG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsEntitledWarranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Entitled by Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsMedicalDevice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Installed Product.. indicates if this Work Order is performed on a Medical Device.</description>
        <inlineHelpText>Copied from the Installed Product.. indicates if this Work Order is performed on a Medical Device.</inlineHelpText>
        <label>Is Medical Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_China_WO__c</fullName>
        <description>Denotes if the work order country is China</description>
        <formula>IF( (TEXT(SVMXC__Country__c) == &apos;China&apos; || TEXT(SVMXC__Country__c) == &apos;CN&apos;) &amp;&amp; $Profile.Name == &apos;SVMX PS - APAC Field Engineer - Platform&apos;,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes if the work order country is China</inlineHelpText>
        <label>Is China WO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Enterprise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Enterprise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Install__c</fullName>
        <formula>TEXT(SVMXC__Billing_Type__c) = &quot;Installation&quot;</formula>
        <label>Is Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_My_Team__c</fullName>
        <formula>IF( SVMXC__Group_Member__r.SVMXC__Salesforce_User__r.Manager.Id = $User.Id , True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_My_Work_Order__c</fullName>
        <formula>IF( $User.Id =  OwnerId , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Pending_IP__c</fullName>
        <description>Pulls over Is Pending IP Record from Installed Product. Used in Creating Generic IP Process</description>
        <formula>SVMXC__Component__r.SMAX_PS_Is_Pending_IP_Record__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls over Is Pending IP Record from Installed Product. Used in Creating Generic IP Process</inlineHelpText>
        <label>Is Pending IP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_TPV__c</fullName>
        <formula>SVMXC__Group_Member__r.SVMXC__Third_Party__c</formula>
        <label>Is Third Party Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Tier_2_Dispatcher__c</fullName>
        <description>Drives the dispatch and escalate to field service work order SFM access</description>
        <formula>IF($User.SMAX_PS_Is_Tier_2_Dispatcher__c = true, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Drives the dispatch and escalate to field service work order SFM access</inlineHelpText>
        <label>Is Tier 2 Dispatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LabManager__c</fullName>
        <description>Lab Manager</description>
        <inlineHelpText>Lab Manager</inlineHelpText>
        <label>Lab Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Labor_Count__c</fullName>
        <description>Count of number of labor lines used in debrief.</description>
        <inlineHelpText>Count of number of labor lines used in debrief.</inlineHelpText>
        <label>Total Labor Estimate Hours</label>
        <summarizedField>SVMXC__Service_Order_Line__c.SVMXC__Actual_Quantity2__c</summarizedField>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Line_Type__c</field>
            <operation>equals</operation>
            <value>Labor</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Estimate</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Labor_Unit_Price__c</fullName>
        <description>Averages the total labor amount by the total labor hours</description>
        <formula>IF(SMAX_PS_Total_Labor_Amount__c!=0 &amp;&amp; SMAX_PS_Sum_of_Labor__c!=0,
SMAX_PS_Total_Labor_Amount__c / SMAX_PS_Sum_of_Labor__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Averages the total labor amount by the total labor hours</inlineHelpText>
        <label>Labor Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastForceIntegration__c</fullName>
        <description>The Datetime of the most recent Force Integration event.  The trigger only allows them every two minutes.</description>
        <inlineHelpText>The Datetime of the most recent Force Integration event.  The trigger only allows them every two minutes.</inlineHelpText>
        <label>Last Force Integration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Last_Integration_Error__c</fullName>
        <description>Contains the most recent Integration Error message for the Order Order.</description>
        <inlineHelpText>Contains the most recent Integration Error message for the Order Order.</inlineHelpText>
        <label>Last Integration Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Last_Work_Order_Details__c</fullName>
        <description>Details the last servicing technician, date of service and order type.</description>
        <formula>SVMXC__Component__r.SMAX_PS_Last_Work_Order_Details__c</formula>
        <inlineHelpText>Details the last servicing technician, date of service and order type.</inlineHelpText>
        <label>Last Work Order Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Left_PIV_with_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the PM/OQ/IPV was left with the customer</description>
        <inlineHelpText>Denotes that the PM/OQ/IPV was left with the customer</inlineHelpText>
        <label>PM/OQ/IPV Left with Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LocalLanguageBillTo__c</fullName>
        <description>Local Language Bill To</description>
        <inlineHelpText>Local Language Bill To</inlineHelpText>
        <label>Local Language Bill To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LocalLanguageShipTo__c</fullName>
        <description>Local Language Ship To</description>
        <inlineHelpText>Local Language Ship To</inlineHelpText>
        <label>Local Language Ship To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Local_Lang_Bill_To_Addr_Long__c</fullName>
        <description>Denotes the local language city state zip</description>
        <inlineHelpText>Denotes the local language city state zip</inlineHelpText>
        <label>Local Lang Bill To Addr(Long)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Local_Lang_Ship_To_Addr_Long__c</fullName>
        <description>Local Language Ship to Address</description>
        <inlineHelpText>Local Language Ship to Address</inlineHelpText>
        <label>Local Lang Ship To Addr (Long)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Local_Language_Bill_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Language Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (Local Language Bill To Account)</relationshipLabel>
        <relationshipName>WorkOrderLocalLangBillTos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Local_Language_Bill_To_Is_Null__c</fullName>
        <description>Denotes that the local language bill to account is blank</description>
        <formula>IF(ISBLANK(SMAX_PS_Local_Language_Bill_To_Account__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes that the local language bill to account is blank</inlineHelpText>
        <label>Local Language Bill To Is Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Local_Language_Bill_To_Street__c</fullName>
        <description>Denotes the Local Language Bill To Street</description>
        <inlineHelpText>Denotes the Local Language Bill To Street</inlineHelpText>
        <label>Local Language Bill To Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Local_Language_Ship_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Language Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (Local Language Ship To Account)</relationshipLabel>
        <relationshipName>WorkOrderLocalLangShipTos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Local_Language_Ship_To_Is_Null__c</fullName>
        <description>Checks if the local language ship to account lookup field is null</description>
        <formula>IF(ISBLANK(SMAX_PS_Local_Language_Ship_To_Account__c ),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks if the local language ship to account lookup field is null</inlineHelpText>
        <label>Local Language Ship To Is Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Local_Language_Ship_To_Street__c</fullName>
        <description>Denotes the local language ship to name</description>
        <inlineHelpText>Denotes the local language ship to name</inlineHelpText>
        <label>Local Language Ship To Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LocationCode__c</fullName>
        <label>Location Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Location_Notes__c</fullName>
        <description>For additional notes on the likely location(s) where this contact might be: Special instructions, where they may be other than their office, etc. Example: Jane has Lab A and Office 4 listed but in the free text it says she is often in the prep lab B or the data center, Room 21.</description>
        <inlineHelpText>For additional notes on the likely location(s) where this contact might be: Special instructions, where they may be other than their office, etc.</inlineHelpText>
        <label>Location Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Lock_Scheudling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Locks scheduling for a work order by manager</description>
        <inlineHelpText>Locks scheduling for a work order by manager</inlineHelpText>
        <label>Lock Scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ManualComplaint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be automatically checked by the system if the WO Priority is ever saved with a value of &quot;Complaint&quot;.</description>
        <inlineHelpText>This field will be automatically checked by the system if the WO Priority is ever saved with a value of &quot;Complaint&quot;.</inlineHelpText>
        <label>Manual Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Matching_Status__c</fullName>
        <formula>IF(( SMAX_PS_Tech_Expertise__r.SVMXC__Skill__c =  SVMXC__Skill__c ), IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;),IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matching Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ModelSeries__c</fullName>
        <label>Model Series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Model_Number__c</fullName>
        <description>Model number of the IP. Used to resolve technician search.</description>
        <label>Model Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Offline_Contract_Discounts__c</fullName>
        <description>JSON data representing the Contract Discounts, used in Offline Pricing.</description>
        <inlineHelpText>JSON data representing the Contract Discounts, used in Offline Pricing.</inlineHelpText>
        <label>Offline Contract Discounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Offline_Pricing_Notes__c</fullName>
        <label>Offline Pricing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Optional_Considerations__c</fullName>
        <description>Optional considerations when creating an estimate</description>
        <inlineHelpText>Optional considerations when creating an estimate</inlineHelpText>
        <label>Optional Considerations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Original_Work_Order_Type__c</fullName>
        <description>Stamps the type of work order that is originally created.</description>
        <label>Original Work Order Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Override_End_of_Life_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that allows for work orders to be created even if the installed product is end of life</description>
        <inlineHelpText>Checkbox that allows for work orders to be created even if the installed product is end of life</inlineHelpText>
        <label>Override End of Life Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Override_Malfunction_Start_Date__c</fullName>
        <description>Date time field to override the malfunction start date</description>
        <inlineHelpText>Date time field to override the malfunction start date</inlineHelpText>
        <label>Override Malfunction Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PKI_PO_Number_to_Vendor__c</fullName>
        <description>Displays the PKI Purchase Order Number to the specified Vendor</description>
        <inlineHelpText>Displays the PKI Purchase Order Number to the specified Vendor</inlineHelpText>
        <label>PKI PO Number to Vendor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PO_Amount__c</fullName>
        <description>Amount obtained from a purchase order</description>
        <inlineHelpText>Amount obtained from a purchase order</inlineHelpText>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PO_Attached_Date_Time__c</fullName>
        <description>The date/time at that purchase order number was captured for this Work Order. PKI goal is to dispatch WO within 1 hour of receiving the PO.</description>
        <inlineHelpText>The date/time at that purchase order number was captured for this Work Order. PKI goal is to dispatch WO within 1 hour of receiving the PO.</inlineHelpText>
        <label>PO Attached Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Parts_Count__c</fullName>
        <description>Count of number of parts used in debrief.</description>
        <inlineHelpText>Count of number of parts used in debrief.</inlineHelpText>
        <label>Parts Count</label>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Line_Type__c</field>
            <operation>equals</operation>
            <value>Parts</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Usage/Consumption</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Payer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (Payer)</relationshipLabel>
        <relationshipName>WorkOrderPayers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PeSalesRep__c</fullName>
        <description>PE Sales Representative</description>
        <inlineHelpText>PE Sales Representative</inlineHelpText>
        <label>PE Sales Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Perform_Auto_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If True - run the trigger to assign to Tech</description>
        <label>Auto Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Planned_Quote_Approval_Date__c</fullName>
        <description>Date that the quote is planned to be approved</description>
        <inlineHelpText>Date that the quote is planned to be approved</inlineHelpText>
        <label>Planned Quote Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Platform_Event_Log__c</fullName>
        <formula>HYPERLINK(&quot;/apex/SMAX_PS_PlatformEventLog?RelatedID=&quot; &amp; Id &amp; &quot;&amp;RelatedName=&quot; &amp; Name, &quot;View&quot;)</formula>
        <label>Platform Event Log</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Previous_Technician_Email__c</fullName>
        <description>Previously assigned technician email address</description>
        <inlineHelpText>Previously assigned technician email address</inlineHelpText>
        <label>Previous Technician Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Previous_Technician_Name__c</fullName>
        <description>Denotes the previously assigned technician&apos;s full name</description>
        <inlineHelpText>Denotes the previously assigned technician&apos;s full name</inlineHelpText>
        <label>Previous Technician Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ProductSeries__c</fullName>
        <description>Product Series</description>
        <inlineHelpText>Product Series</inlineHelpText>
        <label>Product Series</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Life_Cycle__c</fullName>
        <description>Denotes the serviceability of the product</description>
        <formula>TEXT(SVMXC__Product__r.SMAX_PS_Product_Life_Cycle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes the serviceability of the product</inlineHelpText>
        <label>Product Life Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Purchase_Requisition_Number__c</fullName>
        <description>Displays the Purchase Requisition Number</description>
        <inlineHelpText>Displays the Purchase Requisition Number</inlineHelpText>
        <label>Purchase Requisition Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Q1_Answer__c</fullName>
        <description>Answer to first question</description>
        <label>Q1 Answer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Q1_Guidance__c</fullName>
        <defaultValue>&quot;Review: Verify all parts used and applicable serial numbers are entered in the service report. Where pictures will assist in problem identification, and permissible by the customer, attach them to the service report with an explanation below. List in detail any accessories, consumables, non-PerkinElmer items that may be involved with the issue.&quot;</defaultValue>
        <description>Copies the default values from the Q1-Q5 Question fields</description>
        <inlineHelpText>Copies the default values from the Q1-Q5 Question fields</inlineHelpText>
        <label>Q1 Guidance</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Q1_Response__c</fullName>
        <description>Question #1 for the Regulatory Questions</description>
        <inlineHelpText>Question #1 for the Regulatory Questions</inlineHelpText>
        <label>Q1 Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Q1__c</fullName>
        <defaultValue>&quot;Are there any alleged deficiencies related to identify, qualify, durability, reliability, safety, performance or effectiveness of a product?&quot;</defaultValue>
        <description>First Question if HSI Questions were answered or Complaint Box Checked</description>
        <label>Q1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Q2_Answer__c</fullName>
        <description>Answer to the Second Question</description>
        <label>Q2 Answer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Q2_Guidance__c</fullName>
        <defaultValue>&quot;Issue: Provide a complete description of each problem encountered. Include, as applicable: customer observed symptoms, service protocol ID, expected vs observed values, etc.&quot;</defaultValue>
        <description>Copies the default values from the Q1-Q5 Question fields</description>
        <inlineHelpText>Copies the default values from the Q1-Q5 Question fields</inlineHelpText>
        <label>Q2 Guidance</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Q2_Response__c</fullName>
        <description>Question #2 for the Regulatory Questions</description>
        <inlineHelpText>Question #2 for the Regulatory Questions</inlineHelpText>
        <label>Q2 Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Q2__c</fullName>
        <defaultValue>&quot;Is it related to a possible failure of service, sales, application such as: distribution, installation, expected or contradicted activities, order management affecting product or delivery, etc. (excluding invoicing errors)?&quot;</defaultValue>
        <label>Q2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Q3_Answer__c</fullName>
        <description>Answer to the third question</description>
        <label>Q3 Answer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Q3_Guidance__c</fullName>
        <defaultValue>&quot;Factors: Is this a systemic instrument/software problem, or is it caused by certain conditions? What conditions may be contributing? Examples: sample/data type/characteristics; reagents; test procedure; instrument workload and care; customer infrastructure (electric, gases, etc.), environment, or training; instrument is used beyond designed specifications.&quot;</defaultValue>
        <description>Copies the default values from the Q1-Q5 Question fields</description>
        <inlineHelpText>Copies the default values from the Q1-Q5 Question fields</inlineHelpText>
        <label>Q3 Guidance</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>